Modifiy the navigationBar.Html. Both the content in the naviagation bar and their positions are adjusted.

--- a/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
+++ b/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
@@ -6,53 +6,50 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">中医药知识图谱</a>
+            <a class="navbar-brand" href="">IASO知识图谱</a>
+
         </div>
         <div class="navbar-collapse in" style="height: auto;">
             <ul class="nav navbar-nav">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">知识图谱<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">知识地图<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="">中医药学语言系统</a></li>
-                        <li><a href="">中医特色疗法知识地图</a></li>
-                        <li><a href="">中医经方知识图谱</a></li>
-                        <li><a href="">中医养生知识图谱</a></li>
-                        <li><a href="">中医学术传承知识图谱</a></li>
-                        <li><a href="">中医美容知识图谱</a></li>
-                        <li><a href="">中医医案知识图谱</a></li>
-                        <li><a href="">中医特色诊疗技术知识图谱</a></li>
+                        <li><a href="">抗生素知识图谱【英文】</a></li>
+                        <li><a href="">抗感染药物知识图谱【中文】</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">知识服务<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">目录索引<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="">名医信息检索</a></li>
+                        <li><a href="">抗生素目录索引</a></li>
 
-                        <li><a href="">医案知识检索</a></li>
-                        <li class="divider">
-                        </li><li><a href="">知识分析</a></li>
+                        <li><a href="">抗感染药物目录索引</a></li>
+                        <!--<li class="divider">-->
+                        <!--</li><li><a href="">知识分析</a></li>-->
                     </ul>
                 </li>
-                <li><a href="/introduce">项目简介</a></li>
+
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">项目<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">使用说明<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="">北京地区中医皮肤科代表流派学术思想传承和文献整理挖掘</a></li>
-                        <li><a href="">中医养生知识图谱的构建与应用研究</a></li>
-                        <li><a href="">中医特色疗法知识地图</a></li>
-                        <li><a href="">中医药学语言系统的语义网络框架</a></li>
+                        <li><a href="">API接口使用说明</a></li>
+                        <li><a href="">Download使用说明</a></li>
+                        <!--<li><a href="">中医特色疗法知识地图</a></li>-->
+                        <!--<li><a href="">中医药学语言系统的语义网络框架</a></li>-->
                     </ul>
                 </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">文档<b class="caret"></b></a>
+
+                <li><a href="/introduce">系统简介</a></li>
+            </ul>
+            <ul class="nav pull-right">
+                <li ><a href="#" class="dropdown-toggle" data-toggle="dropdown">登录|注册<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li> <a href="" role="button">中医药知识图谱介绍</a></li>
-                        <li><a href="">中医药知识图谱举例</a></li>
-                        <li class="divider">
-                        </li><li><a href="">中医药知识地图系统介绍</a></li>
+                    <li><a href="" role="button">医学专家认证</a></li>
+                    <li><a href="">普通用户入口</a></li>
                     </ul>
                 </li>
             </ul>
+
         </div><!--/.navbar-collapse -->
     </div>
 </div>
