--- a/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
+++ b/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
@@ -14,8 +14,8 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">知识地图<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="">抗生素知识图谱【英文】</a></li>
-                        <li><a href="">抗感染药物知识图谱【中文】</a></li>
+                        <li><a href="/antibioticKG">抗生素知识图谱【英文】</a></li>
+                        <li><a href="/agentKG">抗感染药物知识图谱【中文】</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
