--- a/src/main/webapp/WEB-INF/FTL/template/head.html
+++ b/src/main/webapp/WEB-INF/FTL/template/head.html
@@ -14,6 +14,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+<!--<script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>-->
 <script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>
-<script src="https://cdn.bootcss.com/d3/4.8.0/d3.min.js"></script>
 
