--- a/src/main/webapp/WEB-INF/FTL/template/head.html
+++ b/src/main/webapp/WEB-INF/FTL/template/head.html
@@ -16,4 +16,5 @@
 
 <!--<script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>-->
 <script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>
+<script src="https://cdn.bootcss.com/echarts/3.6.2/echarts.common.js"></script>
 
