finish notFound.html and introduction.html

--- a/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
+++ b/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
@@ -15,15 +15,15 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">知识地图<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="/antibioticKG">抗生素知识图谱【英文】</a></li>
-                        <li><a href="/agentKG">抗感染药物知识图谱【中文】</a></li>
+                        <li><a href="/notFound">抗感染药物知识图谱【中文】</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">目录索引<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="">抗生素目录索引</a></li>
+                        <li><a href="/notFound">抗生素目录索引</a></li>
 
-                        <li><a href="">抗感染药物目录索引</a></li>
+                        <li><a href="/notFound">抗感染药物目录索引</a></li>
                         <!--<li class="divider">-->
                         <!--</li><li><a href="">知识分析</a></li>-->
                     </ul>
@@ -32,17 +32,17 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">使用说明<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="">API接口使用说明</a></li>
-                        <li><a href="">Download使用说明</a></li>
+                        <li><a href="/notFound">API接口使用说明</a></li>
+                        <li><a href="/notFound">Download使用说明</a></li>
                         <!--<li><a href="">中医特色疗法知识地图</a></li>-->
                         <!--<li><a href="">中医药学语言系统的语义网络框架</a></li>-->
                     </ul>
                 </li>
 
-                <li><a href="/introduce">系统简介</a></li>
+                <li><a href="/introduction">系统简介</a></li>
             </ul>
-            <!--让登录|注册模块靠右对齐-->
-            <ul class="nav pull-right">
+            <!--让登录|注册模块靠右对齐: 暂时隐藏-->
+            <ul class="nav pull-right" style="display: none">
                 <li ><a href="#" class="dropdown-toggle" data-toggle="dropdown">登录|注册<b class="caret"></b></a>
                     <ul class="dropdown-menu">
                     <li><a href="" role="button">医学专家认证</a></li>
