--- a/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
+++ b/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
@@ -32,7 +32,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据集与API接口<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="notFound">API接口使用说明</a></li>
+                        <li><a href="apiTutorial">API接口使用说明</a></li>
                         <li><a href="dataDownload">数据集下载</a></li>
                         <!--<li><a href="">中医特色疗法知识地图</a></li>-->
                         <!--<li><a href="">中医药学语言系统的语义网络框架</a></li>-->
