--- a/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
+++ b/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
@@ -21,7 +21,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">目录索引<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="notFound">抗生素目录索引</a></li>
+                        <li><a href="treeShow">抗生素目录索引</a></li>
 
                         <li><a href="notFound">抗感染药物目录索引</a></li>
                         <!--<li class="divider">-->
