--- a/src/main/webapp/WEB-INF/FTL/template/TreeIndex.html
+++ b/src/main/webapp/WEB-INF/FTL/template/TreeIndex.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/default.css">
-    <link href="https://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <!--<meta charset="UTF-8">-->
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <!--<link rel="stylesheet" type="text/css" href="css/default.css">-->
+    <!--<link href="https://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">-->
 </head>
 <body>
 <div class="container">
@@ -58,8 +58,8 @@
                 </div>
 </div>
 
-    <script src="js/jquery-2.1.0.min.js"></script>
-    <script src="js/bootstrap-treeview.js"></script>
+    <!--<script src="js/jquery-2.1.0.min.js"></script>-->
+    <!--<script src="js/bootstrap-treeview.js"></script>-->
     <script type="text/javascript">
 
         $(function () {
@@ -601,6 +601,5 @@
             getResult();
         });
     </script>
-</div>
 </body>
 </html>
