--- a/src/main/webapp/WEB-INF/FTL/template/head.html
+++ b/src/main/webapp/WEB-INF/FTL/template/head.html
@@ -17,3 +17,6 @@
 <!--<script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>-->
 <script src="https://cdn.bootcss.com/d3/4.8.0/d3.js"></script>
 <script src="http://d3js.org/d3-selection-multi.v1.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap-treeview/1.2.0/bootstrap-treeview.min.js"></script>
+<link href="https://cdn.bootcss.com/bootstrap-treeview/1.2.0/bootstrap-treeview.min.css" rel="stylesheet">
+
