--- a/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
+++ b/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
@@ -11,23 +11,8 @@
         </div>
         <div class="navbar-collapse in" style="height: auto;">
             <ul class="nav navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">知识地图<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="antibioticKG">抗生素知识图谱【英文】</a></li>
-                        <li><a href="notFound">抗感染药物知识图谱【中文】</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">目录索引<b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="treeShow">抗生素目录索引</a></li>
-
-                        <li><a href="notFound">抗感染药物目录索引</a></li>
-                        <!--<li class="divider">-->
-                        <!--</li><li><a href="">知识分析</a></li>-->
-                    </ul>
-                </li>
+                <li><a href="antibioticKG">知识地图</a></li>
+                <li><a href="treeShow">目录索引</a></li>
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据集与API接口<b class="caret"></b></a>
