--- a/src/main/webapp/WEB-INF/FTL/template/TreeIndex.html
+++ b/src/main/webapp/WEB-INF/FTL/template/TreeIndex.html
@@ -15,7 +15,8 @@
                 <div class="row">
                     <div class="col-md-2">
                         <h1><font face="微软雅黑">IASO</font></h1>
-                        <p><strong>抗生素目标索引</strong></p>
+                        <p><strong>Antibiotic Index</strong></p>
+                        <!--<p><strong>抗生素目标索引</strong></p>-->
                     </div>
                     <div class="col-md-10">
                         <div class="row">
@@ -32,7 +33,8 @@
                         </div>
                         <p></p>
                         <p></p>
-                        <p>关系路径</p>
+                        <p>Relation Path</p>
+                        <!--<p>关系路径</p>-->
                     </div>
                 </div>
             </div>
@@ -41,7 +43,8 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="panel panel-default">
-                            <div class="panel-heading">目录索引</div>
+                            <div class="panel-heading">Catalogue Index</div>
+                            <!--<div class="panel-heading">目录索引</div>-->
                             <div class="panel-body">
                                 <div id="treeview2"></div>
                             </div>
@@ -49,7 +52,8 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="panel panel-info">
-                            <div class="panel-heading">实体列表</div>
+                            <div class="panel-heading">Entity List</div>
+                            <!--<div class="panel-heading">实体列表</div>-->
                             <div class="panel-body">
                                 <div id="leafentity"></div>
                             </div>
