--- a/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
+++ b/src/main/webapp/WEB-INF/FTL/template/navigationBar.html
@@ -6,25 +6,31 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="">IASO知识图谱</a>
+            <a class="navbar-brand" href="">IASO Knowledge Graph</a>
 
         </div>
         <div class="navbar-collapse in" style="height: auto;">
             <ul class="nav navbar-nav">
-                <li><a href="antibioticKG">知识地图</a></li>
-                <li><a href="treeShow">目录索引</a></li>
+                <li><a href="antibioticKG">Knowledge Graph</a></li>
+                <!--<li><a href="antibioticKG">知识地图</a></li>-->
+                <li><a href="treeShow">Catalogue Index</a></li>
+                <!--<li><a href="treeShow">目录索引</a></li>-->
 
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">数据集与API接口<b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dataset and API<b class="caret"></b></a>
+                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">数据集与API接口<b class="caret"></b></a>-->
                     <ul class="dropdown-menu">
-                        <li><a href="apiTutorial">API接口使用说明</a></li>
-                        <li><a href="dataDownload">数据集下载</a></li>
+                        <li><a href="apiTutorial">API Instruction</a></li>
+                        <!--<li><a href="apiTutorial">API接口使用说明</a></li>-->
+                        <li><a href="dataDownload">Dataset Download</a></li>
+                        <!--<li><a href="dataDownload">数据集下载</a></li>-->
                         <!--<li><a href="">中医特色疗法知识地图</a></li>-->
                         <!--<li><a href="">中医药学语言系统的语义网络框架</a></li>-->
                     </ul>
                 </li>
 
-                <li><a href="introduction">系统简介</a></li>
+                <li><a href="introduction">About</a></li>
+                <!--<li><a href="introduction">系统简介</a></li>-->
             </ul>
             <!--让登录|注册模块靠右对齐: 暂时隐藏-->
             <ul class="nav pull-right" style="display: none">
